--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="vertical-left">
+    <!--<div class="horizontal-scroll-band">
+      <div>
+        <a>
+          <img src="img/scrollImages/1.jpg"></img>
+        </a>
+      </div>
+    </div>-->
+    <!--<div id="vertical-left">
       <div></div>
     </div>
     <div id="vertical-right">
@@ -19,13 +25,13 @@
     <div id="horizontal-top">
       <div></div>
     </div>
-    <!-- <div id="horizontal-bottom">
+     <div id="horizontal-bottom">
       <div></div>
-    </div> -->
+    </div>
 
     <div id="#footer">
-      
-    </div>
+
+    </div>-->
     <script src="bower_components/jquery/dist/jquery.min.js">
     </script>
     <script src="script.js">
